--- a/src/main/webapp/pages/MyMessages/MyMessages.html
+++ b/src/main/webapp/pages/MyMessages/MyMessages.html
@@ -20,12 +20,52 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                        <wm-panel iconclass="wi wi-message" autoclose="outsideClick" name="panel2" title="My Messages" class="panel-primary"></wm-panel>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn6" padding="1em unset">
+                        <wm-label padding="unset 0.5em" name="label1" caption="My Messages" fontweight="bold" fontsize="20"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow4">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                        <wm-tabs name="tabsMessages">
+                            <wm-tabpane name="tabpaneInbox" title="Inbox">
+                                <wm-grid title="" dataset="bind:Variables.svGetUserMessages.dataSet" navigation="Classic" name="gridInbox">
+                                    <wm-grid-column binding="sourceType" caption="Source Type" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="sourceTitle" caption="Source Title" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="municipalityName" caption="Municipality" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="postedByFullName" caption="Posted By" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="postedAt" caption="Posted At" type="string" col-ng-class="{'unRead':row['messageRead']==false}" datepattern="MM-dd-yy hh:mm a" formatpattern="toDate" edit-widget-type="text"
+                                    show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="message" caption="Message" type="string" col-ng-class="{'unRead':row['messageRead']==false}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="municipalityMessage" caption="Internal" type="string" widget-type="checkbox" col-ng-class="{'unRead':row['messageRead']==false}" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"
+                                    edit-widget-type="text" show="true" readonly="false">
+                                        <wm-checkbox scopedatavalue="row['municipalityMessage']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                    </wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-row-action key="updaterow" display-name="" show="bind:!row['messageRead']" class="btn-transparent" iconclass="wi wi-check" title="Mas as Read" action="Variables.svSetMessageReadStatus.invoke();updaterowAction($event)"
+                                    disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-search" title="View" action="deleterowAction($event)" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-reply" title="Reply" disabled="false"></wm-grid-row-action>
+                                </wm-grid>
+                            </wm-tabpane>
+                            <wm-tabpane name="tabpaneSent" title="Sent"></wm-tabpane>
+                        </wm-tabs>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="view3">
+        <wm-pagedialog name="pagedialogViewForm" oktext="Close" content="_viewForm" modal="true" class="modal-larger" title="View Form" iconclass="wi wi-assignment">
+            <wm-param name="FormGUID" value="bind:Widgets.gridInbox.selecteditem.sourceGuid" type="string"></wm-param>
+        </wm-pagedialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-pagedialog name="pagedialogViewInspection" title="View Inspection" oktext="Close" content="_viewInspection" class="modal-larger" modal="true" iconclass="wi wi-find-in-page">
+            <wm-param name="inspectionGuid" value="bind:Widgets.gridInbox.selecteditem.sourceGuid" type="string"></wm-param>
+        </wm-pagedialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="view2">
+        <wm-pagedialog name="pagedialogViewProject" title="View Project" oktext="Close" content="_viewProject" class="modal-larger" modal="true" iconclass="wi wi-find-in-page"></wm-pagedialog>
+    </wm-view>
 </wm-page>
