--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -334,10 +334,10 @@
                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Request Inspection" show="bind:Variables.CurrentForm.firstRecord.formStatuses.allowInspections||Variables.svUserPermissions.dataSet.isEmployee||Variables.svUserPermissions.dataSet.isAdmin"
                                                     class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Inspection" action="Widgets.dialogViewInspection.open()"
+                                                    disabled="false"></wm-grid-row-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.isEmployee || Variables.svUserPermissions.dataSet.isAdmin" class="btn-transparent"
                                                     iconclass="wi wi-trash" title="Delete" action="Variables.lvDeleteFormsToInspections.deleteRecord()" disabled="false"></wm-grid-row-action>
-                                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="viewInspection" action="Widgets.dialogViewInspection.open()"
-                                                    disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -1208,7 +1208,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view12">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Information" iconclass="wi wi-file-text" name="dialogViewInspection" class="modal-larger">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="View Inspection" iconclass="wi wi-find-in-page" name="dialogViewInspection" class="modal-larger">
             <wm-dialogactions name="dialogactions12">
                 <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button26"></wm-button>
             </wm-dialogactions>
