--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -1,38 +1,40 @@
 <wm-partial data-ng-controller="newFormDialogPageController" name="partial1">
-    <wm-layoutgrid name="layoutgrid1">
-        <wm-gridrow name="gridrow1">
-            <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                <wm-composite name="composite4_1" show="bind:Variables.StandardUserMunicipalities.dataSet.content.length > 1" padding="unset unset 2em unset">
-                    <wm-label class="col-md-3 form-control-static" caption="Select Municipality" name="label20" width="160px" fontweight="bold"></wm-label>
-                    <wm-container class="col-md-9" name="container4" width="240px">
-                        <wm-select dataset="bind:Variables.StandardUserMunicipalities.dataSet" datafield="ID" displayfield="MunicipalityName" name="selectMunicipality" orderby="MunicipalityName:asc" placeholder="Select Municipality" on-change="selectMunicipalityChange($event, $scope, newVal, oldVal)"></wm-select>
-                    </wm-container>
-                </wm-composite>
-            </wm-gridcolumn>
-        </wm-gridrow>
-        <wm-gridrow name="gridrow2">
-            <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue" padding="unset unset 2em unset">
-                    <wm-label class="col-md-3 form-control-static" name="label18" caption="Filter by Category" width="160px" fontweight="bold"></wm-label>
-                    <wm-container class="col-md-9" name="container2" width="240px">
-                        <wm-select name="selectCategory" datafield="id" placeholder="All Categories" dataset="bind:Variables.lvFormCategories.dataSet" displayfield="category" on-change="selectCategoryChange($event, $scope, newVal, oldVal)"></wm-select>
-                    </wm-container>
-                </wm-composite>
-            </wm-gridcolumn>
-        </wm-gridrow>
-        <wm-gridrow name="gridrow3">
-            <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length" padding="unset unset 1em unset">
-                    <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form" width="160px" fontweight="bold"></wm-label>
-                    <wm-container class="col-md-9" name="container3" width="240px">
-                        <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form"></wm-select>
-                    </wm-container>
-                </wm-composite>
-            </wm-gridcolumn>
-        </wm-gridrow>
-    </wm-layoutgrid>
-    <wm-dialogactions name="dialogactions1">
-        <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope);closeDlg()" show="true" iconclass="wi wi-plus" disabled="bind:!Widgets.selectForm.datavalue"></wm-button>
-        <wm-button class="btn-secondary" caption="Cancel" on-click="button1Click($event, $scope)" name="button1" iconclass="wi wi-cancel"></wm-button>
-    </wm-dialogactions>
+    <wm-container name="containerDialog">
+        <wm-layoutgrid name="layoutgrid1">
+            <wm-gridrow name="gridrow1">
+                <wm-gridcolumn columnwidth="12" name="gridcolumn1">
+                    <wm-composite name="composite4_1" show="bind:Variables.StandardUserMunicipalities.dataSet.content.length > 1" padding="unset unset 2em unset">
+                        <wm-label class="col-md-3 form-control-static" caption="Select Municipality" name="label20" width="160px" fontweight="bold"></wm-label>
+                        <wm-container class="col-md-9" name="container4" width="240px">
+                            <wm-select dataset="bind:Variables.StandardUserMunicipalities.dataSet" datafield="ID" displayfield="MunicipalityName" name="selectMunicipality" orderby="MunicipalityName:asc" placeholder="Select Municipality" on-change="selectMunicipalityChange($event, $scope, newVal, oldVal)"></wm-select>
+                        </wm-container>
+                    </wm-composite>
+                </wm-gridcolumn>
+            </wm-gridrow>
+            <wm-gridrow name="gridrow2">
+                <wm-gridcolumn columnwidth="12" name="gridcolumn3">
+                    <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue" padding="unset unset 2em unset">
+                        <wm-label class="col-md-3 form-control-static" name="label18" caption="Filter by Category" width="160px" fontweight="bold"></wm-label>
+                        <wm-container class="col-md-9" name="container2" width="240px">
+                            <wm-select name="selectCategory" datafield="id" placeholder="All Categories" dataset="bind:Variables.lvFormCategories.dataSet" displayfield="category" on-change="selectCategoryChange($event, $scope, newVal, oldVal)"></wm-select>
+                        </wm-container>
+                    </wm-composite>
+                </wm-gridcolumn>
+            </wm-gridrow>
+            <wm-gridrow name="gridrow3">
+                <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                    <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length" padding="unset unset 1em unset">
+                        <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form" width="160px" fontweight="bold"></wm-label>
+                        <wm-container class="col-md-9" name="container3" width="240px">
+                            <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form"></wm-select>
+                        </wm-container>
+                    </wm-composite>
+                </wm-gridcolumn>
+            </wm-gridrow>
+        </wm-layoutgrid>
+        <wm-dialogactions name="dialogactions1">
+            <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope);closeDlg()" show="true" iconclass="wi wi-plus" disabled="bind:!Widgets.selectForm.datavalue"></wm-button>
+            <wm-button class="btn-secondary" caption="Cancel" on-click="button1Click($event, $scope)" name="button1" iconclass="wi wi-cancel"></wm-button>
+        </wm-dialogactions>
+    </wm-container>
 </wm-partial>
