--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -16,7 +16,7 @@
                     <wm-composite name="composite3" show="bind:!!Widgets.selectMunicipality.datavalue" padding="unset unset 2em unset">
                         <wm-label class="col-md-3 form-control-static" name="label18" caption="Filter by Category" width="160px" fontweight="bold"></wm-label>
                         <wm-container class="col-md-9" name="container2" width="240px">
-                            <wm-select name="selectCategory" datafield="id" placeholder="All Categories" dataset="bind:Variables.lvFormCategories.dataSet" displayfield="category" on-change="selectCategoryChange($event, $scope, newVal, oldVal)"></wm-select>
+                            <wm-select name="selectCategory" datafield="id" placeholder="All Categories" dataset="bind:Variables.lvFormCategories.dataSet" displayfield="category" on-change="selectCategoryChange($event, $scope, newVal, oldVal)" orderby="category:asc"></wm-select>
                         </wm-container>
                     </wm-composite>
                 </wm-gridcolumn>
@@ -26,7 +26,7 @@
                     <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length" padding="unset unset 1em unset">
                         <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form" width="160px" fontweight="bold"></wm-label>
                         <wm-container class="col-md-9" name="container3" width="240px">
-                            <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form"></wm-select>
+                            <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form" orderby="FormType:asc"></wm-select>
                         </wm-container>
                     </wm-composite>
                 </wm-gridcolumn>
